[gd_scene load_steps=13 format=3 uid="uid://b7nweudaunvh4"]

[ext_resource type="Texture2D" uid="uid://coq3kv8ws1xlu" path="res://used_assests/gui/level_screen/panel_brown.png" id="1_7yenv"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_x3s14"]
[ext_resource type="Texture2D" uid="uid://dibag1waru7fv" path="res://used_assests/gui/level_screen/panelInset_beigeLight.png" id="2_m1pmo"]
[ext_resource type="Texture2D" uid="uid://df1nqpatypbql" path="res://used_assests/hub/TilesetFloor.png" id="2_wofll"]
[ext_resource type="Texture2D" uid="uid://bvsnm3dqxdkir" path="res://used_assests/red.png" id="3_jj6rj"]
[ext_resource type="Texture2D" uid="uid://dr1nkqd1nid8n" path="res://used_assests/red_pressed.png" id="4_u6f1n"]
[ext_resource type="Texture2D" uid="uid://7rx3braogpee" path="res://used_assests/blue.png" id="5_rl41d"]
[ext_resource type="Texture2D" uid="uid://dnfhlvo2tugeq" path="res://used_assests/blue_pressed.png" id="6_kl4hg"]
[ext_resource type="Texture2D" uid="uid://cwslyv01s2qnb" path="res://used_assests/green.png" id="8_llw4s"]
[ext_resource type="Texture2D" uid="uid://dmlmt3nkj52g" path="res://used_assests/green_pressed.png" id="9_j1x4o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_60e36"]
texture = ExtResource("2_wofll")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
12:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
0:18/0 = 0
1:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
0:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0

[sub_resource type="TileSet" id="TileSet_crdo6"]
sources/0 = SubResource("TileSetAtlasSource_60e36")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3s14")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -104.0
offset_right = 208.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7yenv")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
offset_left = 64.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 216.0
texture = ExtResource("2_m1pmo")

[node name="ExitGameButton" type="TextureButton" parent="CanvasLayer"]
texture_filter = 1
offset_left = 144.0
offset_top = 160.0
offset_right = 328.0
offset_bottom = 208.0
texture_normal = ExtResource("3_jj6rj")
texture_pressed = ExtResource("4_u6f1n")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/ExitGameButton"]
texture_filter = 1
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 39.0
text = "Exit"
horizontal_alignment = 1

[node name="NewGameButton" type="TextureButton" parent="CanvasLayer"]
texture_filter = 1
offset_left = 144.0
offset_top = 104.0
offset_right = 328.0
offset_bottom = 152.0
texture_normal = ExtResource("5_rl41d")
texture_pressed = ExtResource("6_kl4hg")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/NewGameButton"]
texture_filter = 1
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 133.0
offset_bottom = 39.0
text = "New Game"
horizontal_alignment = 1

[node name="ContinueGameButton" type="TextureButton" parent="CanvasLayer"]
texture_filter = 1
offset_left = 144.0
offset_top = 48.0
offset_right = 328.0
offset_bottom = 96.0
texture_normal = ExtResource("8_llw4s")
texture_pressed = ExtResource("9_j1x4o")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/ContinueGameButton"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 39.0
text = "Continue Game"
horizontal_alignment = 1

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_crdo6")
format = 2
layer_0/tile_data = PackedInt32Array(786435, 196608, 12, 786436, 262144, 12, 786437, 0, 12, 786438, 65536, 12, 786439, 131072, 12, 0, 0, 12, 1, 65536, 12, 2, 131072, 12, 3, 196608, 12, 4, 262144, 12, 65536, 0, 12, 65537, 65536, 12, 65538, 131072, 12, 65539, 196608, 12, 65540, 262144, 12, 131072, 0, 12, 131073, 65536, 12, 131074, 131072, 12, 131075, 196608, 12, 131076, 262144, 12, 196608, 0, 12, 196609, 65536, 12, 196610, 131072, 12, 196611, 196608, 12, 196612, 262144, 12, 262144, 0, 12, 262145, 65536, 12, 262146, 131072, 12, 262147, 196608, 12, 262148, 262144, 12, 327680, 0, 12, 327681, 65536, 12, 327682, 131072, 12, 327683, 196608, 12, 327684, 262144, 12, 393216, 0, 12, 393217, 65536, 12, 393218, 131072, 12, 393219, 196608, 12, 393220, 262144, 12, 458752, 0, 12, 458753, 65536, 12, 458754, 131072, 12, 458755, 196608, 12, 458756, 262144, 12, 524288, 0, 12, 524289, 65536, 12, 524290, 131072, 12, 524291, 196608, 12, 524292, 262144, 12, 589824, 0, 12, 589825, 65536, 12, 589826, 131072, 12, 589827, 196608, 12, 589828, 262144, 12, 655360, 0, 12, 655361, 65536, 12, 655362, 131072, 12, 655363, 196608, 12, 655364, 262144, 12, 720896, 0, 12, 720897, 65536, 12, 720898, 131072, 12, 720899, 196608, 12, 720900, 262144, 12, 786432, 0, 12, 786433, 65536, 12, 786434, 131072, 12, 851968, 0, 12, 851969, 65536, 12, 851970, 131072, 12, 851971, 196608, 12, 851972, 262144, 12, 917504, 0, 12, 917505, 65536, 12, 917506, 131072, 12, 917507, 196608, 12, 917508, 262144, 12, 983040, 0, 12, 983041, 65536, 12, 983042, 131072, 12, 983043, 196608, 12, 983044, 262144, 12, 5, 0, 12, 6, 65536, 12, 7, 131072, 12, 8, 196608, 12, 9, 262144, 12, 65541, 0, 12, 65542, 65536, 12, 65543, 131072, 12, 65544, 196608, 12, 65545, 262144, 12, 131077, 0, 12, 131078, 65536, 12, 131079, 131072, 12, 131080, 196608, 12, 131081, 262144, 12, 196613, 0, 12, 196614, 65536, 12, 196615, 131072, 12, 196616, 196608, 12, 196617, 262144, 12, 262149, 0, 12, 262150, 65536, 12, 262151, 131072, 12, 262152, 196608, 12, 262153, 262144, 12, 327685, 0, 12, 327686, 65536, 12, 327687, 131072, 12, 327688, 196608, 12, 327689, 262144, 12, 393221, 0, 12, 393222, 65536, 12, 393223, 131072, 12, 393224, 196608, 12, 393225, 262144, 12, 458757, 0, 12, 458758, 65536, 12, 458759, 131072, 12, 458760, 196608, 12, 458761, 262144, 12, 524293, 0, 12, 524294, 65536, 12, 524295, 131072, 12, 524296, 196608, 12, 524297, 262144, 12, 589829, 0, 12, 589830, 65536, 12, 589831, 131072, 12, 589832, 196608, 12, 589833, 262144, 12, 655365, 0, 12, 655366, 65536, 12, 655367, 131072, 12, 655368, 196608, 12, 655369, 262144, 12, 720901, 0, 12, 720902, 65536, 12, 720903, 131072, 12, 720904, 196608, 12, 720905, 262144, 12, 786440, 196608, 12, 786441, 262144, 12, 851973, 0, 12, 851974, 65536, 12, 851975, 131072, 12, 851976, 196608, 12, 851977, 262144, 12, 917509, 0, 12, 917510, 65536, 12, 917511, 131072, 12, 917512, 196608, 12, 917513, 262144, 12, 983045, 0, 12, 983046, 65536, 12, 983047, 131072, 12, 983048, 196608, 12, 983049, 262144, 12, 10, 0, 12, 11, 65536, 12, 12, 131072, 12, 13, 196608, 12, 14, 262144, 12, 65546, 0, 12, 65547, 65536, 12, 65548, 131072, 12, 65549, 196608, 12, 65550, 262144, 12, 131082, 0, 12, 131083, 65536, 12, 131084, 131072, 12, 131085, 196608, 12, 131086, 262144, 12, 196618, 0, 12, 196619, 65536, 12, 196620, 131072, 12, 196621, 196608, 12, 196622, 262144, 12, 262154, 0, 12, 262155, 65536, 12, 262156, 131072, 12, 262157, 196608, 12, 262158, 262144, 12, 327690, 0, 12, 327691, 65536, 12, 327692, 131072, 12, 327693, 196608, 12, 327694, 262144, 12, 393226, 0, 12, 393227, 65536, 12, 393228, 131072, 12, 393229, 196608, 12, 393230, 262144, 12, 458762, 0, 12, 458763, 65536, 12, 458764, 131072, 12, 458765, 196608, 12, 458766, 262144, 12, 524298, 0, 12, 524299, 65536, 12, 524300, 131072, 12, 524301, 196608, 12, 524302, 262144, 12, 589834, 0, 12, 589835, 65536, 12, 589836, 131072, 12, 589837, 196608, 12, 589838, 262144, 12, 655370, 0, 12, 655371, 65536, 12, 655372, 131072, 12, 655373, 196608, 12, 655374, 262144, 12, 720906, 0, 12, 720907, 65536, 12, 720908, 131072, 12, 720909, 196608, 12, 720910, 262144, 12, 786442, 0, 12, 786443, 65536, 12, 786444, 131072, 12, 786445, 196608, 12, 786446, 262144, 12, 851978, 0, 12, 851979, 65536, 12, 851980, 131072, 12, 851981, 196608, 12, 851982, 262144, 12, 917514, 0, 12, 917515, 65536, 12, 917516, 131072, 12, 917517, 196608, 12, 917518, 262144, 12, 983050, 0, 12, 983051, 65536, 12, 983052, 131072, 12, 983053, 196608, 12, 983054, 262144, 12, 15, 0, 12, 16, 65536, 12, 17, 131072, 12, 18, 196608, 12, 19, 262144, 12, 65551, 0, 12, 65552, 65536, 12, 65553, 131072, 12, 65554, 196608, 12, 65555, 262144, 12, 131087, 0, 12, 131088, 65536, 12, 131089, 131072, 12, 131090, 196608, 12, 131091, 262144, 12, 196623, 0, 12, 196624, 65536, 12, 196625, 131072, 12, 196626, 196608, 12, 196627, 262144, 12, 262159, 0, 12, 262160, 65536, 12, 262161, 131072, 12, 262162, 196608, 12, 262163, 262144, 12, 327695, 0, 12, 327696, 65536, 12, 327697, 131072, 12, 327698, 196608, 12, 327699, 262144, 12, 393231, 0, 12, 393232, 65536, 12, 393233, 131072, 12, 393234, 196608, 12, 393235, 262144, 12, 458767, 0, 12, 458768, 65536, 12, 458769, 131072, 12, 458770, 196608, 12, 458771, 262144, 12, 524303, 0, 12, 524304, 65536, 12, 524305, 131072, 12, 524306, 196608, 12, 524307, 262144, 12, 589839, 0, 12, 589840, 65536, 12, 589841, 131072, 12, 589842, 196608, 12, 589843, 262144, 12, 655375, 0, 12, 655376, 65536, 12, 655377, 131072, 12, 655378, 196608, 12, 655379, 262144, 12, 720911, 0, 12, 720912, 65536, 12, 720913, 131072, 12, 720914, 196608, 12, 720915, 262144, 12, 786447, 0, 12, 786448, 65536, 12, 786449, 131072, 12, 786450, 196608, 12, 786451, 262144, 12, 851983, 0, 12, 851984, 65536, 12, 851985, 131072, 12, 851986, 196608, 12, 851987, 262144, 12, 917519, 0, 12, 917520, 65536, 12, 917521, 131072, 12, 917522, 196608, 12, 917523, 262144, 12, 983055, 0, 12, 983056, 65536, 12, 983057, 131072, 12, 983058, 196608, 12, 983059, 262144, 12, 20, 0, 12, 21, 65536, 12, 22, 131072, 12, 23, 196608, 12, 24, 262144, 12, 65556, 0, 12, 65557, 65536, 12, 65558, 131072, 12, 65559, 196608, 12, 65560, 262144, 12, 131092, 0, 12, 131093, 65536, 12, 131094, 131072, 12, 131095, 196608, 12, 131096, 262144, 12, 196628, 0, 12, 196629, 65536, 12, 196630, 131072, 12, 196631, 196608, 12, 196632, 262144, 12, 262164, 0, 12, 262165, 65536, 12, 262166, 131072, 12, 262167, 196608, 12, 262168, 262144, 12, 327700, 0, 12, 327701, 65536, 12, 327702, 131072, 12, 327703, 196608, 12, 327704, 262144, 12, 393236, 0, 12, 393237, 65536, 12, 393238, 131072, 12, 393239, 196608, 12, 393240, 262144, 12, 458772, 0, 12, 458773, 65536, 12, 458774, 131072, 12, 458775, 196608, 12, 458776, 262144, 12, 524308, 0, 12, 524309, 65536, 12, 524310, 131072, 12, 524311, 196608, 12, 524312, 262144, 12, 589844, 0, 12, 589845, 65536, 12, 589846, 131072, 12, 589847, 196608, 12, 589848, 262144, 12, 655380, 0, 12, 655381, 65536, 12, 655382, 131072, 12, 655383, 196608, 12, 655384, 262144, 12, 720916, 0, 12, 720917, 65536, 12, 720918, 131072, 12, 720919, 196608, 12, 720920, 262144, 12, 786452, 0, 12, 786453, 65536, 12, 786454, 131072, 12, 786455, 196608, 12, 786456, 262144, 12, 851988, 0, 12, 851989, 65536, 12, 851990, 131072, 12, 851991, 196608, 12, 851992, 262144, 12, 917524, 0, 12, 917525, 65536, 12, 917526, 131072, 12, 917527, 196608, 12, 917528, 262144, 12, 983060, 0, 12, 983061, 65536, 12, 983062, 131072, 12, 983063, 196608, 12, 983064, 262144, 12, 25, 0, 12, 26, 65536, 12, 27, 131072, 12, 28, 196608, 12, 29, 262144, 12, 65561, 0, 12, 65562, 65536, 12, 65563, 131072, 12, 65564, 196608, 12, 65565, 262144, 12, 131097, 0, 12, 131098, 65536, 12, 131099, 131072, 12, 131100, 196608, 12, 131101, 262144, 12, 196633, 0, 12, 196634, 65536, 12, 196635, 131072, 12, 196636, 196608, 12, 196637, 262144, 12, 262169, 0, 12, 262170, 65536, 12, 262171, 131072, 12, 262172, 196608, 12, 262173, 262144, 12, 327705, 0, 12, 327706, 65536, 12, 327707, 131072, 12, 327708, 196608, 12, 327709, 262144, 12, 393241, 0, 12, 393242, 65536, 12, 393243, 131072, 12, 393244, 196608, 12, 393245, 262144, 12, 458777, 0, 12, 458778, 65536, 12, 458779, 131072, 12, 458780, 196608, 12, 458781, 262144, 12, 524313, 0, 12, 524314, 65536, 12, 524315, 131072, 12, 524316, 196608, 12, 524317, 262144, 12, 589849, 0, 12, 589850, 65536, 12, 589851, 131072, 12, 589852, 196608, 12, 589853, 262144, 12, 655385, 0, 12, 655386, 65536, 12, 655387, 131072, 12, 655388, 196608, 12, 655389, 262144, 12, 720921, 0, 12, 720922, 65536, 12, 720923, 131072, 12, 720924, 196608, 12, 720925, 262144, 12, 786457, 0, 12, 786458, 65536, 12, 786459, 131072, 12, 786460, 196608, 12, 786461, 262144, 12, 851993, 0, 12, 851994, 65536, 12, 851995, 131072, 12, 851996, 196608, 12, 851997, 262144, 12, 917529, 0, 12, 917530, 65536, 12, 917531, 131072, 12, 917532, 196608, 12, 917533, 262144, 12, 983065, 0, 12, 983066, 65536, 12, 983067, 131072, 12, 983068, 196608, 12, 983069, 262144, 12, 30, 0, 12, 65566, 0, 12, 131102, 0, 12, 196638, 0, 12, 262174, 0, 12, 327710, 0, 12, 393246, 0, 12, 458782, 0, 12, 524318, 0, 12, 589854, 0, 12, 655390, 0, 12, 720926, 0, 12, 786462, 0, 12, 851998, 0, 12, 917534, 0, 12, 983070, 0, 12)

[connection signal="pressed" from="CanvasLayer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
